--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,62 +1,66 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<html lang="{{ site.lang | default: " en-US" }}">
 
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-light-blue.css">
-    <script src="https://www.w3schools.com/lib/w3.js"></script>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
-    <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-light-blue.css">
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
+
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}"
+    media="screen" type="text/css">
+  <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
 
 
-    <!--[if lt IE 9]>
+  <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
-{% include mathjax.html %}
+  {% include mathjax.html %}
 
-{% seo %}
-  </head>
+  {% seo %}
 
-  <body>
-    <header>
-      <div class="inner">
-        <a href="{{ '/' | absolute_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </a>
-	<!-- -        <h2>{{ site.description | default: site.github.project_tagline }}</h2> -->
-        {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
-        {% endif %}
-        {% if site.github.is_user_page %}
-          <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
-        {% endif %}
-      </div>
-    </header>
+  <title>{{site.title}}</title>
+</head>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          {{ content }}
-        </section>
-      </div>
+<body>
+  <header>
+    <div class="inner">
+      <a href="{{ '/' | absolute_url }}">
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+      </a>
+      <!-- -        <h2>{{ site.description | default: site.github.project_tagline }}</h2> -->
+      {% if site.github.is_project_page %}
+      <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
+      {% endif %}
+      {% if site.github.is_user_page %}
+      <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
+      {% endif %}
     </div>
-  </body>
+  </header>
 
-  <script>
-         function myFunction(id) {
-             var x = document.getElementById(id);
-             if (x.className.indexOf("w3-show") == -1) {
-                 x.className += " w3-show";
-             } else {
-                 x.className = x.className.replace(" w3-show", "");
-             }
-         }
-        </script>
+  <div id="content-wrapper">
+    <div class="inner clearfix">
+      <section id="main-content">
+        {{ content }}
+      </section>
+    </div>
+  </div>
+</body>
+
+<script>
+  function myFunction(id) {
+    var x = document.getElementById(id);
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else {
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }
+</script>
 
 
 </html>
