--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,8 @@
 @import "jekyll-theme-architect";
 
 html,body {
-    font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif,"Open Sans";
+    /*font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif,"Open Sans";*/
+    font-family: Calibri, 'Helvetica Neue', Helvetica, Arial, serif;
 }
 
 
