--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,9 @@
 ---
 ---
 
+
 @import "jekyll-theme-architect";
+@import "vs.css";
 
 html,body {
     /*font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif,"Open Sans";*/
